finished first rule and update readme.md

--- a/قوانین/قانون‌اول.md
+++ b/قوانین/قانون‌اول.md
@@ -3,3 +3,21 @@
 ### ذهن خود را با قانون ۲۰ دقیقه فریب دهید
 
 یادگیری کدنویسی تاحدودی شبیه به باشگاه رفتن است. اگر شما سخت تمرین کنید ولی فقط آخر هفته‌ها به باشگاه بروید، تفاوت قابل توجهی در بدن خود مشاهده نخواهید کرد. هرچه منظم‌تر کدنویسی را یاد بگیرید و تمرین کنید، احتمال اینکه عضلات کدنویسی خود را مشاهده کنید بیشتر است.
+
+اما مشکل اینجاست که شما کی زمان پیدا می‌کنید؟ چه زمانی قرار است بشینید و کدنویسی را یاد بگیرید و تمرین کنید؟
+
+زمانی که به عنوان پزشک کار می کردم، حدود 12 ساعت را در بیمارستان گذراندم. تقریبا ۱ ساعت صرف رفت و آمد و ۲ ساعت صرف چیزهای کلی زندگی مثل غذاخوردن و... می‌شد. بنابراین فقط ۹ ساعت از زمانم باقی می ‌ماند. از نظر تئوری، ۲ ساعت به کد نویسی و ۷ ساعت به خواب اختصاص پیدا می‌کرد. اما هیچ چیز دشوارتر از این نیست که بخواهید ذهن پر از کار خود را متقاعد کنید که بشیند و یاد بگیرد، در صورتی که می‌تواند روی تخت لم بدهد و توی اینستگرام و فضای مجازی چرخ بزند.
+
+اما من یک ترفند پیدا کردم.
+
+ما به عنوان انسان، اینرسی(لختی) زیادی داریم. این می‌تواند برای ما بد باشد در حالی که می ‌توانیم از آن به نفع خود استفاده کنیم.
+
+من این را زمانی فهمیدم که وقتی شروع به کدنویسی و ساختن چیزها کردم،‌ آن‌قدر جذب پروژه شده بودم که اتفاقات اطرافم مثل حرف زدن اطرافیان، تلویزیون و حتی خواب اهمیتی نمی‌دادم.
+
+حالا چگونه باید از این اینرسی استفاده کنیم؟ اول، باید درک کنید که تغییر دادن کار بسیار دشوار است و انگیزه زیادی می خواهد. اگر به محض اینکه به خانه رسیدید، روی مبل خوابیدید و تلویزیون را روشن کردید، آن شب را از دست داده اید. این به این دلیل است که میزان انگیزه مورد نیاز برای تغییر کار و انجام کاری که در راستای تکامل نیست(ذهن به آن به عنوان نیاز برای بقا نگاه نمی‌کند)، مانند خوردن یا خوابیدن، یک کار به شدت دشوار و سخت است.
+
+به همین دلیل است که لحظه‌ای که وارد محیط جدید می شوید حیاتی ترین لحظه است. اگر در این لحظه، با خود بگویید که فقط 20 دقیقه تمرین کدنویسی را انجام می دهید به احتمال زیاد موفق خواهید شد که انجامش دهید. می‌بینید که توانسته‌اید از اینرسی خود برای پایان دادن به یادگیری چیزی حدود یک ساعت یا بیشتر استفاده کنید. هیچ مغزی یک کار 20 دقیقه ای را به عنوان یک کار زیاد درک نمی کند و شما در نهایت مغز خود را فریب می دهید تا از زمان موجود استفاده کند.
+
+قدم بعدی ایجاد یک عادت است. تحقیقات نشان می دهد که برای ایجاد یک عادت جدید، باید آن کار را روزانه به مدت یک ماه انجام دهید. من از این ترفند برای چیزهای مختلفی، از ورزش گرفته تا برنامه‌نویسی، استفاده کرده ام و همیشه جواب داده است. برای مقدمه‌ی این ترفند، می‌خواهم دیواری را تصور کنید که پنج تابلو نقاشی روی آن آویزان است، چهار تای آن‌ها کاملاً در یک راستا و کاملاً افقی هستند اما یکی از آن‌ها کج است. واقعا آن را تصور کنید، آیا بخشی از وجود شما دوست دارد آن را درست کند؟
+
+حال بیایید یک تقویم ماهانه با کادرهایی که هر روز را نشان می دهد تصور کنیم. هر روزی که شما آن عادت جدید را در خود پرورش دادید، روی آن خط می‌کشید. چیزی در مورد عدم شکستن یک خط پیوسته وجود دارد که باعث می شود بیشتر افراد به ایجاد یک عادت ادامه دهند. هر چقدر هم که عجیب به نظر برسد، خیلی وقت‌ها پیش می‌آید که شما تسلیم شده‌اید، اما مجبور می‌شوید به خاطر نشکستن آن خط پیوسته ادامه دهید.
