add all rules & linked & finished second rule

--- a/قوانین/01-قانون‌اول.md
+++ b/قوانین/01-قانون‌اول.md
@@ -21,3 +21,5 @@
 قدم بعدی ایجاد یک عادت است. تحقیقات نشان می دهد که برای ایجاد یک عادت جدید، باید آن کار را روزانه به مدت یک ماه انجام دهید. من از این ترفند برای چیزهای مختلفی، از ورزش گرفته تا برنامه‌نویسی، استفاده کرده ام و همیشه جواب داده است. برای مقدمه‌ی این ترفند، می‌خواهم دیواری را تصور کنید که پنج تابلو نقاشی روی آن آویزان است، چهار تای آن‌ها کاملاً در یک راستا و کاملاً افقی هستند اما یکی از آن‌ها کج است. واقعا آن را تصور کنید، آیا بخشی از وجود شما دوست دارد آن را درست کند؟
 
 حال بیایید یک تقویم ماهانه با کادرهایی که هر روز را نشان می دهد تصور کنیم. هر روزی که شما آن عادت جدید را در خود پرورش دادید، روی آن خط می‌کشید. چیزی در مورد عدم شکستن یک خط پیوسته وجود دارد که باعث می شود بیشتر افراد به ایجاد یک عادت ادامه دهند. هر چقدر هم که عجیب به نظر برسد، خیلی وقت‌ها پیش می‌آید که شما تسلیم شده‌اید، اما مجبور می‌شوید به خاطر نشکستن آن خط پیوسته ادامه دهید.
+
+(قانون دوم)[]
