Update the links of the rules

--- a/قوانین/01-قانون‌اول.md
+++ b/قوانین/01-قانون‌اول.md
@@ -22,4 +22,4 @@
 
 حال بیایید یک تقویم ماهانه با کادرهایی که هر روز را نشان می دهد تصور کنیم. هر روزی که شما آن عادت جدید را در خود پرورش دادید، روی آن خط می‌کشید. چیزی در مورد عدم شکستن یک خط پیوسته وجود دارد که باعث می شود بیشتر افراد به ایجاد یک عادت ادامه دهند. هر چقدر هم که عجیب به نظر برسد، خیلی وقت‌ها پیش می‌آید که شما تسلیم شده‌اید، اما مجبور می‌شوید به خاطر نشکستن آن خط پیوسته ادامه دهید.
 
-(قانون دوم)[]
+[قانون دوم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/02-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%AF%D9%88%D9%85.md)
