--- a/قوانین/08-قانون‌هشتم.md
+++ b/قوانین/08-قانون‌هشتم.md
@@ -2,4 +2,4 @@
 
 ### یادگیری خود را متوقف نکنید، دائما یاد بگیرید
 
-(قانون نهم)[]
+[قانون نهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/09-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%86%D9%87%D9%85.md)
