--- a/قوانین/12-قانون‌دوازدهم.md
+++ b/قوانین/12-قانون‌دوازدهم.md
@@ -3,5 +3,7 @@
 ### کد‌های شخص دیگری را بازبینی کنید و آن را تغییر دهید
 
 مرسی که برای پیشرفت خودت وقت گذاشتی،
+
 ارادتمند شما:
-(محسن میرزایی - برنامه‌نویس فرانت‌اند)[https://mohsenmirzaei.ir]
+
+[محسن میرزایی - برنامه‌نویس فرانت‌اند)](https://mohsenmirzaei.ir)
