--- a/قوانین/07-قانون‌هفتم.md
+++ b/قوانین/07-قانون‌هفتم.md
@@ -2,4 +2,4 @@
 
 ### در مقابل کسی پاسخگو باشید، کار خود را نشان دهید
 
-(قانون هشتم)[]
+[قانون هشتم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/08-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%87%D8%B4%D8%AA%D9%85.md)
