--- a/قوانین/09-قانون‌نهم.md
+++ b/قوانین/09-قانون‌نهم.md
@@ -2,4 +2,4 @@
 
 ### بازی کنید(فوتبال دستی، بازی یا...)
 
-(قانون دهم)[]
+[قانون دهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/10-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%AF%D9%87%D9%85.md)
