--- a/قوانین/10-قانون‌دهم.md
+++ b/قوانین/10-قانون‌دهم.md
@@ -2,4 +2,4 @@
 
 ### یک منتور(مربی) بگیرید، برنامه نویسی جفتی(تیمی، دوتایی) را امتحان کنید
 
-(قانون یازدهم)[]
+[قانون یازدهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/11-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%DB%8C%D8%A7%D8%B2%D8%AF%D9%85.md)
