--- a/قوانین/11-قانون‌یازدم.md
+++ b/قوانین/11-قانون‌یازدم.md
@@ -2,4 +2,4 @@
 
 ### عادت تکه‌تکه کردن را در خود پرورش دهید
 
-(قانون دوازدهم)[]
+[قانون دوازدهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/12-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%AF%D9%88%D8%A7%D8%B2%D8%AF%D9%87%D9%85.md)
