fixed the words of links

--- a/قوانین/02-قانون‌دوم.md
+++ b/قوانین/02-قانون‌دوم.md
@@ -12,4 +12,4 @@
 
 در راستای خلق پروژه خودتان، هیچ محدودیتی وجود ندارد، البته زمانی که شما شروع به کار کردن بر روی پروژه‌ خودتان می‌کنید، دشوار خواهد بود، چرا که مثل دوره آموزشیتان، دستور‌العمل‌های مرحله به مرحله وجود ندارد و شما خودتان باید آن را کشف کنید. فراموش نکنید که دقیقا بعد از گذراندن این مرحله است که مهارت شما در کدنویسی افزایش میابد و توانایی شما در حل مسائل و چالش‌ها هم ارتقا پیدا می‌کند.
 
-[قانون سوم)](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/03-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%B3%D9%88%D9%85.md)
+[قانون سوم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/03-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%B3%D9%88%D9%85.md)
