--- a/قوانین/03-قانون‌سوم.md
+++ b/قوانین/03-قانون‌سوم.md
@@ -2,4 +2,4 @@
 
 ### هیچ "زبان کاملی" برای یادگیری وجود ندارد
 
-[قانون چهارم)](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/04-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%DA%86%D9%87%D8%A7%D8%B1%D9%85.md)
+[قانون چهارم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/04-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%DA%86%D9%87%D8%A7%D8%B1%D9%85.md)
