--- a/قوانین/05-قانون‌پنجم.md
+++ b/قوانین/05-قانون‌پنجم.md
@@ -2,4 +2,4 @@
 
 ### اینکه چیزی را نمی‌دانید، اشکالی ندارد
 
-[قانون ششم)](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/06-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%B4%D8%B4%D9%85.md)
+[قانون ششم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/06-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%B4%D8%B4%D9%85.md)
