--- a/قوانین/06-قانون‌ششم.md
+++ b/قوانین/06-قانون‌ششم.md
@@ -2,4 +2,4 @@
 
 ### کپی‌کننده(شبیه‌ساز) باشید
 
-[قانون هفتم)](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/07-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%87%D9%81%D8%AA%D9%85.md)
+[قانون هفتم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/07-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%87%D9%81%D8%AA%D9%85.md)
