fixed spelling mistake

--- a/قوانین/04-قانون‌چهارم.md
+++ b/قوانین/04-قانون‌چهارم.md
@@ -1,5 +1,5 @@
 # قانون چهارم
 
-### کد را که می‌نویسید، بفهمید
+### کدی را که می‌نویسید، بفهمید
 
 [قانون پنجم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/05-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%BE%D9%86%D8%AC%D9%85.md)
