--- a/قوانین/12-قانون‌دوازدهم.md
+++ b/قوانین/12-قانون‌دوازدهم.md
@@ -6,4 +6,4 @@
 
 ارادتمند شما:
 
-[محسن میرزایی - برنامه‌نویس فرانت‌اند)](https://mohsenmirzaei.ir)
+[محسن میرزایی - برنامه‌نویس فرانت‌اند](https://mohsenmirzaei.ir)
