Finished the third rule

--- a/قوانین/03-قانون‌سوم.md
+++ b/قوانین/03-قانون‌سوم.md
@@ -2,4 +2,33 @@
 
 ### هیچ "زبان کاملی" برای یادگیری وجود ندارد
 
+هرموقع که سخنرانی داشتم، همیشه یک نفر وجود داشت که از من می‌پرسید: "برنامه نویسی را با چه زبانی شروع کنم"؟ این یک تصور رایج است که یک زبان عالی برای برنامه نویسان مبتدی وجود دارد. یک نفر می‌گوید آن پایتون است، دیگری می‌گوید آن سویفت است.
+
+ولی من می‌گوییم همه آن‌ها اشتباه می‌کنند.
+
+زبان برنامه نویسی یک ابزار ساده است. هیچ تفاوتی با ابزارهایی که در جعبه ابزار خانه‌تان وجود دارد ندارد. اگر بخواهید به دیوار میخ بکوبید، از چکش استفاده می‌کنید. اگر بخواهید نشتی لوله آب را تعمیر کنید، احتمالا به آچار نیاز خواهید داشت. البته که با پهنای آچار هم می‌توان میخ را کوبید ولی ابزار بهتری برای این کار وجود دارد. زبان‌های برنامه نویسی هم همینطور، از هر کدام برای حل کردن مشکلات مخلتفی استفاده می‌شود. از نظر نجار، بهترین ابزار اَره است، از نظر لوله‌کش هم بهترین ابزار آچار لوله‌کش است اما بهترین ابزار برای هرکاری نمی‌باشند.
+
+یک توسعه دهنده وب به شما می‌گوید که بهترین زبان برنامه نویسی برای شروع یادگیری جاوااسکریپت است. یک آمارشناس به شما توصیه می‌کند که با زبان (R) شما بهترین خدمات را خواهید داشت. اما در پایان روز، شما دغدغه‌تان این است حالا با کدام زبان شروع کنم؟! اگر می‌خواهید اپلیکیشن‌های IOS را بسازید و توسعه بدهید، سویفت را یاد بگیرید. اگر می‌خواهید وب سایت بسازید، به جاوااسکریپت نیاز دارید. اما خبر خوب این است که مفاهیم اصلی برنامه نویسی مثل: حلقه‌ها، دستورات شرطی، توابع و... یکسان است. تفاوت آن‌ها در نوع نگارش (سینتکس) است. در زبان فارسی ما می‌گوییم سلام، در انگلیسی می‌گویند (Hello)، اما مفهوم اصلی همان سلام کردن است.
+
+چاپ کردن خروجی در زبان سویفت به این شکل است:
+
+```swift
+print(“Hello Werewolves”)
+```
+
+در جاوا به این شکل:
+
+```java
+println(“Hello Werwölfe”)
+
+```
+
+و در جاوااسکریپت به این شکل:
+
+```js
+console.log(""Hello World");
+```
+
+بنابراین، در مورد کاری که می‌خواهید با برنامه نویسی انجام دهید، تصمیم بگیرید و بعد بهترین ابزار را برای انجام آن انتخاب کنید.
+
 [قانون چهارم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/04-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%DA%86%D9%87%D8%A7%D8%B1%D9%85.md)
