Finished the fourth rule

--- a/قوانین/04-قانون‌چهارم.md
+++ b/قوانین/04-قانون‌چهارم.md
@@ -2,4 +2,22 @@
 
 ### کدی را که می‌نویسید، بفهمید
 
+من با نحوه نگارش و طراحی اکثر آموزش‌های برنامه‌نویسی مشکل دارم. آموزش‌های بسیاری در رابطه با اینکه چگونه فلان چیز را با فلان زبان در فلان ساعت پیاده‌سازی کنیم وجود دارد.
+
+تقریبا اگر برنامه‌نویس نیت خوبی داشته باشد، همه چیز را قدم‌به‌قدم به شما نشان می‌دهد. اما بعدا، کسی که آموزش را می‌بیند، در نقاطی متوجه می‌شود در حال انجام کارهای بیهوده است و از ادامه دادن آموزش، منصرف می‌شود.
+
+از طرفی آموزش‌های زیادی را دیده‌ام که مدرس آن با سطح بالایی از جزئیات طاقت‌فرسا درس را شروع می‌کند و اواسط راه به شما می‌گوید: "شما به راحتی یک دیتابیس ابری ایجاد کردید"، در صورتی که آموزش برای مبتدیان بوده است.
+
+این سبک از آموزش مشکلاتی را ایجاد می‌کند. رایج‌ترین مشکل این است که دانشجو فقط کدهایی که در طول آموزش نوشته می‌شود را کپی‌ و پِیست می‌کند و هیچ اطلاعاتی درباره کارکرد آن‌ها ندارد. چرا آن کدها را زمانی که فایل .json را تحلیل و تجزیه می‌کرد، به آن اضافه کرد؟ چرا فلان پوشه را در فلان جای پروژه ایجاد کرد؟
+
+وسوسه شدن برای دیدن این نوع آموزش‌ها بسیار راحت است چون که به شما قول می‌دهند چگونه "دیجی‌کالا" یا "آمازون" را بسازیم. اما در دو سوم از راه است که متوجه می‌شوید هیچ کدام از کدهایی که نوشتید معنی ندارد و صفحه شروع به قرمز شدن می‌کند! باگ‌ها تولید می‌شوند. چیزی اجرا نمی‌شود، هیچ‌ ایده‌ای هم ندارید! در طول سه ساعت آموزشتان شما فقط کدها را کپی و پِیست کردید و هیچ‌ چیزی یاد نگرفته‌اید به غیر اینکه کدنویسی سخت است یا شاید شما به درد این کار نمی‌خورید!
+
+در این تله گیر نکنید. اگر آموزشی را دیدید که بعد از ۳ خط کد، از مبتدی به پیشرفته پرش می‌کند یا از کلمه "به‌راحتی" زیاد استفاده می کند و هیچ یک از کدها را توضیح نمی‌دهد، آن را متوقف کنید و از آن را خارج شوید.
+
+یادتان باشد که در دریا ماهی زیاد است.
+
+در برخی مواقع که مدرس تلاش می‌کند آنچه را که انجام داده است توضیح دهد، اما شما همچنان متوجه نمی‌شوید که او چه می‌گوید، شما آموزشی پیشرفته‌تر از سطح خودتان انتخاب کرده‌اید و مهارت برنامه‌نویسیتان تقویت پیدا نمی‌کند. ساختن چیزهای خفن و زیبا می‌تواند وسوسه انگیز باشد، مخصوصا زمانی که در توضیحات گفته شده است هرکسی با هر سطحی می‌تواند این آموزش را ببیند. اما اگر شما متوجه نشوید و درک نکنید که کدها چگونه کار می‌کنند، بهتر است مفاهیم پایه‌ای خود را تقویت کنید.
+
+کلید یادگیری کد نویسی، سطح شیب دار پلکانی است. شما می‌خواهید هر بار پیشرفت کنید و باید این کار را با قرار دادن دانش جدید بر روی دانش قبلی خود انجام دهید. اگر شیب این کار زیاد باشد، شما در آن گم می‌شوید، در عین حال اگر شیب آن کم باشد، خسته می‌شود. شیب مناسب برای هر کسی نسبت به هوش و استعداد و دانش قبلی آن متفاوت است. به همین دلیل است ما به دانشجویانمان توصیه می‌کنیم از قابلیت تغییر سرعت ویدیو در آموزش‌هایشان استفاده کنند. با این کار، اگر با مفاهیم از قبل آشنا باشید، سرعت آن را دو برابر می‌کنید و اگر با آن‌ها آشنا نیستید، به زمان بیشتری برای فهمیدن و جذب مفاهیم نیاز دارید.
+
 [قانون پنجم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/05-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%BE%D9%86%D8%AC%D9%85.md)
