Update 01-قانون‌اول.md - Correct spelling mistakes

--- a/قوانین/01-قانون‌اول.md
+++ b/قوانین/01-قانون‌اول.md
@@ -6,7 +6,7 @@
 
 اما مشکل اینجاست که شما کی زمان پیدا می‌کنید؟ چه زمانی قرار است بشینید و کدنویسی را یاد بگیرید و تمرین کنید؟
 
-زمانی که به عنوان پزشک کار می کردم، حدود 12 ساعت را در بیمارستان گذراندم. تقریبا ۱ ساعت صرف رفت و آمد و ۲ ساعت صرف چیزهای کلی زندگی مثل غذاخوردن و... می‌شد. بنابراین فقط ۹ ساعت از زمانم باقی می ‌ماند. از نظر تئوری، ۲ ساعت به کد نویسی و ۷ ساعت به خواب اختصاص پیدا می‌کرد. اما هیچ چیز دشوارتر از این نیست که بخواهید ذهن پر از کار خود را متقاعد کنید که بشیند و یاد بگیرد، در صورتی که می‌تواند روی تخت لم بدهد و توی اینستگرام و فضای مجازی چرخ بزند.
+زمانی که به عنوان پزشک کار می کردم، حدود 12 ساعت را در بیمارستان گذراندم. تقریبا ۱ ساعت صرف رفت و آمد و ۲ ساعت صرف چیزهای کلی زندگی مثل غذاخوردن و... می‌شد. بنابراین فقط ۹ ساعت از زمانم باقی می ‌ماند. از نظر تئوری، ۲ ساعت به کد نویسی و ۷ ساعت به خواب اختصاص پیدا می‌کرد. اما هیچ چیز دشوارتر از این نیست که بخواهید ذهن پر از کار خود را متقاعد کنید که بشیند و یاد بگیرد، در صورتی که می‌تواند روی تخت لم بدهد و توی اینستاگرام و فضای مجازی چرخ بزند.
 
 اما من یک ترفند پیدا کردم.
 
