Finished the fifth rule

--- a/قوانین/05-قانون‌پنجم.md
+++ b/قوانین/05-قانون‌پنجم.md
@@ -2,4 +2,37 @@
 
 ### اینکه چیزی را نمی‌دانید، اشکالی ندارد
 
+شغل مهندسی نرم‌افزار ظاهر بیشترین جمعیت مبتلا به سندروم ایمپاستر را در بر دارد. سندرم ایمپاستر (impostor syndrome) یک پدیده‌ی روانی است که در آن افراد نمی‌توانند موفقیت‌هایشان را بپذیرند. بر خلاف آنچه شواهد بیرونی نشان می‌دهد که فرد با رقابت و تلاش به موفقیت رسیده، خود فرد تصور می‌کند که لیاقت موفقیت را ندارد و فریب‌کار است.
+
+برنامه‌نویس‌ها تمایل به خود انتقادی دارند و دائما فکر می‌کنند هرکسی در برنامه‌نویسی از آن‌ها بهتر است. اگر تا به حال این احساس را داشتید، شما تنها نیستید، تحقیقات نشان داده است که ۷۰ درصد از مردم مبتلا به سندروم ایمپاستر می‌باشند.
+
+من اخیرا یک پستی در پرسش‌وپاسخ سایت Quora مشاهده کردم که یک نفر پرسیده بود:‌ "آیا از گوگل اخراج می‌شوم؟ (یا یک شرکت بزرگ دیگر، اگر از StackOverFlow به عنوان مرجع استفاده کنم!)"
+
+او تعداد زیادی پاسخ عالی از کارمندان گوگل، آمازون و دیگر کمپانی‌های بزرگ دریافت کرده‌ بود. هر کسی که در حوزه مهندسی نرم‌افزار کار کرده است، به شما می‌گوید که نگاه نکردن به مراجع به مراتب بدتر است. در واقع من از شما می‌خواهم که کسی را در گوگل پیدا کنید که از StackOverFlow استفاده نمی‌کند. (اگر استک‌اُور‌فِلو را نمی‌شناسید، یک سایت پرسش‌وپاسخ مبتنی بر همکاری برای برنامه‌نویسان است.)
+
+اکثر برنامه نویسان جدید، از چک کردن منابع و مراجع و همچنین پرسیدن سوالاتشان از افرادی که می‌توانند به آن‌ها کمک کنند می‌ترسند. آن‌ها فکر می‌کنند با این کار، تقلبی یا کلاه‌برداری که هیچ چیز از برنامه نمیداند به‌نظر می‌رسند. هیچ کسی نمی‌تواند تمام اطلاعات مربوطه را در ذهنش نگه دارد. برای مثال، این اسم یک متد در IOS می‌باشد:
+
+```swift
+- (id)initWithBitmapDataPlanes:(unsigned char **)planes pixelsWide:(NSInteger)width
+pixelsHigh:(NSInteger)height bitsPerSample:(NSInteger)bps
+samplesPerPixel:(NSInteger)spp hasAlpha:(BOOL)alpha isPlanar:(BOOL)isPlanar
+colorSpaceName:(NSString *)colorSpaceName
+bitmapFormat:(NSBitmapFormat)bitmapFormat bytesPerRow:(NSInteger)rowBytes
+bitsPerPixel:(NSInteger)pixelBits;
+```
+
+همان طور که می‌بینید، تقریبا ۴۰۰ کاراکتر است. در برنامه‌نویسی IOS بیش از ۸۰۰ کلاس، ۹۰۰ متد وجود دارد که در حال گسترش هستند. در برنامه‌نویسی وب، هر هفته یک فریم‌ورک جدید ایجاد می‌شود. هیچ‌کس از شما انتظار نخواهد داشت که تمامی کدها را به‌خاطر بسپارید. این دقیقا دلیل برنامه‌نویس بودن ماست، ما می‌توانیم کامپیوتر را وادار کنیم تا کارهای خسته کننده را برای ما انجام دهد. برای مثال، کدی که برای ضبط صدا است، کدی مختصر است که با یک سرچ ساده پیدا می‌شود، چرا باید آن را حفظ کنید؟
+
+مهارتی که بیشتر کارفرمایان زمان استخدام دنبال آن می‌گردند،‌ توانایی فکر کردن است. دانش در دنیایی که اطلاعات به سختی به دست می‌آید باارزش است. در قرن ۱۸، فقط قشر سرمایه‌دار و ثروتمند به کتاب‌ها و استادهای خوب دسترسی داشتند. در حال حاضر، هرکسی فقط با چند کلیک روی موس، به تمام اطلاعات دسترسی دارد. اطلاعات ارزش خود را از دست داده‌اند، این روزها، سهامی که باید بخرید، توانایی فکر کردن است. بنابراین، از سرچ کردن، از پرسیدن سوالاتتان در اِتسک‌اُور‌فِلو یا پیدا کردن منابع برای پیدا کردن راه حل مشکلتان نترسید. بهترین برنامه‌نویس‌ها این کار را انجام می‌دهند.
+
+مهارتی که با آن را تقویت کنید، پرسیدن سوالات خوب و درک کردن جواب آن است. هیچ منفعتی در کپی‌ و پِیست کردن پاسخ سوالات از استک‌اورفلو بدون فهمیدن نحوه کارکرد آن وجود ندارد. چون که استک‌اورفلو بر مبنای سیستم محبوبیت کار می‌کند، به نفع آن‌هاست که تا حد امکان پاسخشان را واضح بنویسند تا بتوانند امتیاز مثبت بگیرند و پاسخشان به عنوان پاسخ صحیح در نظر گرفته شود.
+
+در بیشتر مواقع، به محض اینکه به مشکل برخورد کردید، جست‌وجو کردن منطقی نیست. همیشه باید قدم اولتان این باشد که تلاش کنید خودتان مسئله‌تان را حل کنید. اگر برنامه‌ای که نوشتید، مطابق با انتظارتان کار نمی‌کند، اما قبل از اینکه ۳ خط آخر را بنویسید، به‌درستی کار می‌کرد، قطعا مشکل از آن ۳ خط کدی است که نوشتید، بنابراین آن‌ها را خط به خط چک کنید و بفهمید چرا برنامه‌تان کار نمی‌کند؟
+
+اگر واقعا نتوانستید خودتان مشکلتان را حل کنید، شروع به سرچ کردن کنید. اگر ارور دارید، ارور خود را کپی و پیست کنید، اگر خروجی آن چیزی نیست که انتظارش را دارید، کاری که می‌خواهید برنامه‌تان انجام دهد را سرچ کنید. شانسی که برنامه‌نویسان مبتدی دارند، این است که مشکلات برنامه‌نویسیشان بسیار رایج است و ممکن است کسی برای آن آموزش مختصر و واضحی نوشته باشد تا شما مشکلتان را درک کنید و پاسخ آن را بفهمید. همانطور که مهارت شما در برنامه‌نویسی افزایش پیدا می‌کند، مشکلاتی که با آن روبه‌رو می‌شوید بیشتر و مبهم‌تر می‌شود، اما خوشبختانه اگر شما ۱۱ قانون دیگر را رعایت کنید، شما همزمان برنامه‌نویس توانمندتری خواهید بود و دقیقا می‌دانید که چگونه مسئله‌تان را خودتان حل کنید یا دقیقا باید از کجا کمک بگیرید.
+
+دلیل دیگری برای اینکه سرچ را باید با گوگل شروع کنید این است که الگوریتم سرچ استک‌اورفلو بر اساس تازگی است نه محبوبیت. بسیاری از مشکلات رایجی که با آن‌ها برخورد می‌کنید، با اینکه سال‌های گذشته پرسیده شده است، ولی پاسخشان همچنان محبوب است و کار می‌کند.
+
+بنابراین، سوالات خوب بپرسید و از جامعه برنامه نویسان بهره ببرید. روزی که خودتان در کدنویسی استاد شدید، به همین جامعه بر می‌گردید و به برنامه‌نویسان نسل جدید کمک می‌کنید.
+
 [قانون ششم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/06-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%B4%D8%B4%D9%85.md)
