Finished the sixth rule

--- a/قوانین/06-قانون‌ششم.md
+++ b/قوانین/06-قانون‌ششم.md
@@ -2,4 +2,14 @@
 
 ### کپی‌کننده(شبیه‌ساز) باشید
 
+در ابتدای سفر برنامه‌نویسی من، فکر می کردم راه یادگیری کدنویسی خواندن یک سری کتاب است. من کتاب‌های Java, C#, C++ و دیگر کتاب‌های مرتبط را خریدم. احتمالا نام این کتاب‌ها را می‌دانید، من آن‌ها را داشتم. اما جز گیج شدن،‌ چیز دیگری برای من نداشت.
+
+می‌خواندم. هایلایت می‌کردم. فراموش ‌می‌کردم. خوابم ‌می‌برد.
+
+کتاب ها به عنوان مرجع خوب هستند. اگر می‌خواهید در مفاهیم و پروتکل‌ها عمیق شوید، فصل مربوط به موضوع مد نظرتان را بخوانید. اما اگر می‌خواهید یاد بگیرید، چیزی بسازید.
+
+اما چی بسازید؟
+
+ایده‌ای ندارید؟ کپی کار باشید. دفترچه یادداشت خود را بسازید، MSPaint خود را بسازید، پیانوی خود را بسازید. اگر اهل بازی هستید، مین روب، تتریس یا Flappy Bird را بسازید. آن‌ها علاوه بر اینکه برای شما مفید خواهند بود، فرصت مناسبی برای شما است تا نحوه انجام کارها را پیدا کنید و در یافتن کمک تجربه کسب کنید. در کارهایی که در جهان کاملا جدید است، مثل پیش‌بینی‌های هولوگرافیک تلفن هوشمند، هیچ کس نمی تواند به شما کمک کند. با ساختن اپلیکیشن ها یا برنامه هایی که از روی دیگران کپی کرده‌اید، در مسیری قدم می گذارید که بسیاری قبل از شما آن را طی کرده اند. به این ترتیب شانس بیشتری برای کمک و مشاوره گرفتن از دیگران دارید و حل کردن مشکلاتتان راحت‌تر است.
+
 [قانون هفتم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/07-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%87%D9%81%D8%AA%D9%85.md)
