write a part of the seventh rule

--- a/قوانین/07-قانون‌هفتم.md
+++ b/قوانین/07-قانون‌هفتم.md
@@ -2,4 +2,18 @@
 
 ### در مقابل کسی پاسخگو باشید، کار خود را نشان دهید
 
+بزرگترین مشکل دوره های آنلاین کدنویسی فقدان پاسخگویی در مقابل استاد است. بدون شک، تعداد زیادی دوره آنلاین در Coursera، Udacity، Udemy، Skillshare و... وجود دارد. اما عواقب انجام ندادن تکالیف یا غیبت یک ماه از جلسات چیست؟ هیچی. هیچکس اهمیت نمیدهد.
+
+بیایید علت آن را بررسی کنیم،‌ انگیزه درونی در هیچ یک از ما به اندازه کافی قوی نیست. ما همیشه می‌توانیم دلیلی پیدا کنیم که چرا شایسته «نتفلیکس و آرامش» هستیم و نباید کار فعلی را انجام دهیم. من شخصا نمی‌توانم تعداد دوره‌های آنلاینی که ثبت‌نام کرده‌ام را بشمارم که در آن‌ها جلسات را کامل نکردم و تکالیف را هم انجام ندادم.
+
+شما برای یادگیری به مسئولیت پذیری و تعهد نیاز دارید. به روزهای دانشگاه خود فکر کنید، اگر هیچ چیز به مقاله نوشتنتان بستگی نداشت، زحمت می کشیدید آن را تا ساعت 3 صبح تمام کنید؟ اگر قبولی یا شکست خوردن آن درس برایتان مهم نبود به همه کلاس‌ها می رفتید؟
+
+به همین دلیل است که ما سعی می کنیم پاسخگویی در برابر انجام تکالیف و حضور در کلاس را در دوره‌های خود جدی بگیریم. ما به این نتیجه رسیده‌ایم که کنارهم قرار دادن دانشجویان با یکدیگر، یه یادگیریشان کمک می‌کند. شخص دیگری که هم سطح شماست و گاهی به شما کمک می‌کند و گاها به کمک شما نیاز دارد.
+
+گاهی اوقات، وقتی میزان یادگیریتان متفاوت است یا اگر با یک باگر تنبل (کسی که فقط اشکال می‌گیرد و کاری هم نمی‌کند) همراه شده‌اید، می‌توانید آن را عوض کنید و یک دوست جدید پیدا کنید. از آنجایی که این سیستم کاملاً داوطلبانه است، برای افرادی که به خوبی در تیم کار می کنند و به‌واسطه دیگران انگیزه پیدا می‌کنند، درجه ای از خود انتخابی وجود دارد. همانطور که اگر در باشگاه با حریف‌تمرینی خود ورزش کنید بیشتر پیشرفت می‌کنید، در برنامه‌نویسی هم بیشتر یاد خواهید گرفت.
+
+بنابراین اگر در دوره‌ای شرکت نکرده‌اید، دوره مناسب خودتان را پیدا کنید و با همکلاسی‌های خود ارتباط برقرار کنید. گروه های زیادی در فیس بوک به کسانی که در حال یادگیری کدنویسی هستند اختصاص داده شده است. قطعا افراد هم‌فکر و هم‌سطح خود را در جایی آنلاین یا آفلاین پیدا خواهید کرد.
+
+نکته بعدی که به شما می‌گوییم بحث برانگیز خواهد بود. ما معتقدیم که مردم برای چیزهایی که ارزش ندارد، ارزش قائل نمی‌شوند. به همین دلیل است که Coursera تعداد زیادی از دوره های رایگان خود را حذف می کند. آنها دیدند که میلیون ها نفر برای دوره ثبت نام می کنند، اما هیچ کس در هیچ یک از کلاس ها شرکت نمی کند، چه برسد به اینکه پروژه ها را تکمیل کند. در واقع ارائه یک دوره رایگان برای یادگیری دانش آموزان مضر بود. همه ما درجاتی از گرایش به احتکار را داریم و این که برای موضوعاتی که در آینده قرار است برای آن‌ها زحمت بکشیم، ثبت‌نام کنیم آسان است. پیش خود می‌گوییم، همیشه فردا هست.
+
 [قانون هشتم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/08-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%87%D8%B4%D8%AA%D9%85.md)
