--- a/قوانین/07-قانون‌هفتم.md
+++ b/قوانین/07-قانون‌هفتم.md
@@ -14,6 +14,10 @@
 
 بنابراین اگر در دوره‌ای شرکت نکرده‌اید، دوره مناسب خودتان را پیدا کنید و با همکلاسی‌های خود ارتباط برقرار کنید. گروه های زیادی در فیس بوک به کسانی که در حال یادگیری کدنویسی هستند اختصاص داده شده است. قطعا افراد هم‌فکر و هم‌سطح خود را در جایی آنلاین یا آفلاین پیدا خواهید کرد.
 
-نکته بعدی که به شما می‌گوییم بحث برانگیز خواهد بود. ما معتقدیم که مردم برای چیزهایی که ارزش ندارد، ارزش قائل نمی‌شوند. به همین دلیل است که Coursera تعداد زیادی از دوره های رایگان خود را حذف می کند. آنها دیدند که میلیون ها نفر برای دوره ثبت نام می کنند، اما هیچ کس در هیچ یک از کلاس ها شرکت نمی کند، چه برسد به اینکه پروژه ها را تکمیل کند. در واقع ارائه یک دوره رایگان برای یادگیری دانش آموزان مضر بود. همه ما درجاتی از گرایش به احتکار را داریم و این که برای موضوعاتی که در آینده قرار است برای آن‌ها زحمت بکشیم، ثبت‌نام کنیم آسان است. پیش خود می‌گوییم، همیشه فردا هست.
+نکته بعدی که به شما می‌گوییم بحث برانگیز خواهد بود. ما معتقدیم که مردم برای چیزهایی که ارزش مالی ندارند، ارزش قائل نمی‌شوند. به همین دلیل است که Coursera تعداد زیادی از دوره های رایگان خود را حذف می کند. آنها دیدند که میلیون ها نفر برای دوره ثبت نام می کنند، اما هیچ کس در هیچ یک از کلاس ها شرکت نمی کند، چه برسد به اینکه پروژه ها را تکمیل کند. در واقع ارائه یک دوره رایگان برای یادگیری دانش آموزان مضر بود. همه ما درجاتی از گرایش به احتکار را داریم و این که برای موضوعاتی که در آینده قرار است برای آن‌ها زحمت بکشیم، ثبت‌نام کنیم آسان است. پیش خود می‌گوییم، همیشه فردا هست.
+
+بنابراین اگر به انگیزه بیرونی بیشتری علاوه بر انگیزه درونی خود برای حرکت کردن احتیاج دارید، سعی کنید از انگیزه مالی برای تداوم یادگیری خود استفاده کنید. به این فکر کنید که یک مهارت زندگی چقدر برای شما ارزش دارد و حاضرید پول خود را در کجا قرار دهید. بررسی کنید که آیا با یا بدون تعهد مالی، بیشتر با محتوای دوره درگیر هستید. مکان‌ها و پلتفرم‌های زیادی وجود دارد که می‌توانید هزینه‌ای مقرون به صرفه بپردازید تا به خودتان انگیزه دهید تا یک عادت یادگیری منظم را شروع کنید.
+
+بخش پایانی این قانون تلاش برای یافتن راه هایی برای ارزیابی است. بله درسته که ارزیابی شدن تقریباً همانند مرگ و مالیات است، به این معنی که بسیاری از مردم از آن لذت نمی‌برند. اما هنگام یادگیری هر چیزی، بازخورد گرفتن همیشه مهم است. شما یک ارزیابی عینی از سطح مهارت فعلی خود دریافت خواهید کرد، به جای اینکه احساس کنید یک فرد کم‌توان یا پر از اعتماد به نفس کاذب هستید. Coursera سیستمی دارد که در آن دانش آموزان کار یکدیگر را بررسی و علامت‌گذاری می کنند. در App Brewery، ما از آموزش Github برای آزمایش کدهای شما و پیدا کردن اشکالات و مشکلات کدتان استفاده می کنیم. اگر امکان دسترسی به چنین سیستمی در دوره‌ی آموزش برنامه‌نویسی خود ندارید، در این صورت مفید خواهد بود که یک منتور برنامه‌نویسی پیدا کنید که بتواند کدهای شما را بررسی کرده و بازخورد ارائه دهد. فراموش نکنید فقط آنچه که قابل اندازه گیری است را می‌توان بهبود بخشید.
 
 [قانون هشتم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/08-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%87%D8%B4%D8%AA%D9%85.md)
