Finished the eighth rule

--- a/قوانین/08-قانون‌هشتم.md
+++ b/قوانین/08-قانون‌هشتم.md
@@ -1,5 +1,20 @@
 # قانون هشتم
 
+برنامه‌نویسی همواره در حال تکامل و تحول است. برای حفظ ارتباطتان با جریان برنامه‌نویسی، شما باید خودتان را مداوم بازآفرینی و به‌روز کنید.
+
+همیشه تکنولوژی‌ها، فناوری‌ها و زبان‌های جدیدی به وجود می‌آیند. برنامه‌نویسان حرفه‌ای از یادگیری چیزهای جدید لذت می‌برند، حتی اگر به این شکل باشد که دوباره به عنوان یک مبتدی شروع کنند.
+
+دنیا همیشه در حال حرکت است؛ اگر در یک نقطه بمانید، در نهایت پشت سر خواهید ماند. من برنامه‌نویسانی را می‌شناسم که هیچ چیز به جز Fortran یاد نگرفته‌اند. برنامه‌نویسان Objective-C را می‌شناسم که نمی‌توانند خود را متقاعد کنند که زمان از Objective-C گذشته و Swift یاد بگیرند، حتی اگر اپل به توسعه‌دهندگان بگوید که Objective-C به تدریج حذف خواهد شد. همه ما می‌دانیم که اپل هرگز تهدیدی را اعلام نمی‌کند که قابل اجرا نباشد.
+
+بهتر است بگویم، لپ‌تاپی نشوید که هنوز سعی می‌کند CD پخش کند. اگر نیازهای شما تغییر کرد، یاد بگیرید چگونه از ابزار جدید استفاده کنید. همیشه بیاموزید و در جریان باقی بمانید.
+
+آیا یک توسعه‌دهنده وب هستید که همیشه می‌خواستید به توسعه موبایل بروید؟ یک پلتفرم را انتخاب کنید و iOS یا Android را یاد بگیرید. آیا یک توسعه‌دهنده front-end هستید که به توسعه full-stack علاقه‌مندید؟ با توسعه وب با Node آشنا شوید. اگر اصول اصلی برنامه‌نویسی را درک کرده‌اید، یادگیری چندین زبان دیگر نسبت به شروع از ابتدا آسان‌تر خواهد بود.
+
+یک منبع عالی برای برنامه‌نویسان وجود دارد تا زبان‌های برنامه‌نویسی جدید یاد بگیرند. منابع آن را در اینجا بررسی کنید:
+
+یادگیری x در y دقیقه
+["Learn x in y minutes"](learnxinyminutes.com)
+
 ### یادگیری خود را متوقف نکنید، دائما یاد بگیرید
 
 [قانون نهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/09-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D9%86%D9%87%D9%85.md)
