Finished the nineth rule

--- a/قوانین/09-قانون‌نهم.md
+++ b/قوانین/09-قانون‌نهم.md
@@ -1,5 +1,27 @@
 # قانون نهم
 
-### بازی کنید(فوتبال دستی، بازی یا...)
+### بازی کنید (فوتبال دستی، یا...)
+
+زمانی که فیلم‌های هالیوودی درباره برنامه‌نویسان را می‌بینید، اکثر آن‌ها روبه‌روی یک لب‌تاب نشته‌اند و به سرعت در حال تایپ کردن هستند.
+
+اما واقعیت برنامه‌نویسانی که در حال کار کردن هستند به این شکل است که آن‌ها بدون هیچ حرکتی به مدت طولانی به مانتیور زل زده‌اند.
+
+در یک شرکت، مردم معمولا از اینکه همیشه برنامه‌نویسان دارند فوتبال‌دستی بازی می‌کنند یا چیز دیگری به غیر کار، شکایت دارند. احتمالا افراد نمی‌توانند تشخیص دهند، اما در واقع آن‌ها در حال کار هستند.
+
+دقیقا زمانی که آن‌ها را درحالی که از فوتبال‌دستی بازی کردنشان لذت می‌برند، جوک می‌گویند و می‌خندند می‌بینید، احتمالا در درونشان از چیزی رنج می‌برند. چون همیشه یک باگ وجود دارد. یا ممکن است در کد آن‌ها چیزی مرموز باشد که نتوانند آن را درک کنند. شاید کد به صورت کامل کار می‌کند، اما به طور غیرمنتظره و غیرقابل پیش‌بینی! (برنامه‌نویسان از چیزهای غیرمنتظره‌ خوششان نمی‌آید)، مثل این است که هزار خط کد را یکباره تایپ کرده باشند ولی به طور عجیبی هیچ خطایی وجود نداشته باشد.
+
+در صفحه توئیتر I Am Developer، یک توئیت جالب گذاشته شده که:
+
+قبل از خواب: چای نعناع بنوشید، دوش بگیرید، مدیتیشن کنید، به رختخواب بروید، کتاب بخوانید، دفتر شکرگذاری خود را پر کنید، چراغ‌ها را خاموش کنید، برگردید و...
+
+مغز: سلام، این راه حل آن باگی است که نتواستید حل کنید، در خط 34 در فایل helpers.js، خداحافظ.
+
+شاید بقیه افراد این موضوع را درک نکنند، اما در مواقعی که باگ دارید، تقریبا همیشه بهترین راه‌کار این است که از کد خود فاصله بگیرید و مدتی به ذهنتان زمان بدهید تا راه‌حلش را پیدا کند.
+
+آیا باگی در کدتان وجود دارد که نمی‌توانید حلش کنید؟ یکم بخوابید، فوتبال‌دستی بازی کنید، پیاده‌روی کنید. 90٪ مواقع، راه‌حلش را پیدا خواهید کرد. در 10٪ باقی‌مانده، کدتان پیچیده شده است و به کمک نیاز دارید. شاید بتوانید با مرور کردن خط‌به‌خط کدتان مشکل را پیدا کنید. شاید نیاز است که از یک برنامه‌نویس دیگری کمک بگیرید یا حتی مشکلتان را استک‌اور‌فلو مطرح کنید.
+
+این ممکن است بی‌منطق به‌نظر برسد، اما نصیحت من همیشه این است که کمتر کد بزنید، بیشتر فکر کنید. هنگامی که کدی با تفکر ناکافی نوشته و در برنامه واقعی آورده می‌شود، شما مجبور می‌شوید به عقب برگردید، خط به خط کدها را بررسی و بهم مرتبطت کنید تا بتوانید بعضی از آن‌ها را اصلاح یا حذف کنید. این همیشه یک تجربه دردآور است.
+
+پس به یاد داشته باشید، ساده‌ترین کدی که می‌توانید حذف کنید، کدی است که هیچ‌وقت ننوشته‌اید.
 
 [قانون دهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/10-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%D8%AF%D9%87%D9%85.md)
