Half of the eighth law

--- a/قوانین/10-قانون‌دهم.md
+++ b/قوانین/10-قانون‌دهم.md
@@ -1,5 +1,13 @@
 # قانون دهم
 
-### یک منتور(مربی) بگیرید، برنامه نویسی جفتی(تیمی، دوتایی) را امتحان کنید
+### یک منتور(مربی، مشاوره) بگیرید، برنامه نویسی جفتی(تیمی، دوتایی) را امتحان کنید
+
+وقتی داشتم زبان فرانسوی را یاد می‌گرفتم، با یک روش آشنا شدم که منجر به بزرگترین پیشرفت در توانایی گفتاری من شد. این روش به صورت تبادل زبان از طریق اسکایپ بود. من با یک شخص بومی فرانسوی که می‌خواست انگلیسی یاد بگیرد، جفت شدم. ما نیم ساعت را صرف صحبت کردن به فرانسوی و نیم ساعت دیگر را صرف صحبت کردن به انگلیسی می‌کردیم. هر جفتمان هر هفته یک ساعت را به بهبود زبانی که در حال تلاش برای یادگیری آن بودیم، اختصاص می‌دادیم.
+
+در حین گفتگو به زبان فرانسوی، او تلفظ یا دستور زبان من را اصلاح می‌کرد و راه‌هایی را پیشنهاد می‌داد که با آن‌ها می‌توانستم بومی‌تر حرف بزنم.
+
+برنامه‌نویسی جفتی یک تکنیک توسعه نرم‌افزار چابک است که بر اصول بسیار مشابهی بنا شده است. به عنوان مثال، دانشجو و منتور در محیط کار کنار هم نشسته‌اند و روی یک مسئله کار می‌کنند. فرد یادگیرنده مسئول نوشتن کد است و منتور یا راهنما کدها را در حین نوشتن به صورت خط به خط بررسی می‌کند.
+
+این روش در ابتدای کار ممکن است کمی ناخوشایند باشد، زیرا در هنگام کدنویسی، اشتباهاتتان به شما گفته می‌شود و این ممکن است کمی خجالت‌آور باشد. اما اگر یک منتور با تجربه داشته باشید، او دهه‌ها تجربه عملی و دانش عمیقش را در اختیار شما قرار می‌دهد که این موضوع می‌تواند به طور چشمگیری توانایی شما را بهبود بخشد و همه این کارها فقط در چند ساعت انجام می‌شود.
 
 [قانون یازدهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/11-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%DB%8C%D8%A7%D8%B2%D8%AF%D9%85.md)
