Finished the tenth rule

--- a/قوانین/10-قانون‌دهم.md
+++ b/قوانین/10-قانون‌دهم.md
@@ -10,4 +10,16 @@
 
 این روش در ابتدای کار ممکن است کمی ناخوشایند باشد، زیرا در هنگام کدنویسی، اشتباهاتتان به شما گفته می‌شود و این ممکن است کمی خجالت‌آور باشد. اما اگر یک منتور با تجربه داشته باشید، او دهه‌ها تجربه عملی و دانش عمیقش را در اختیار شما قرار می‌دهد که این موضوع می‌تواند به طور چشمگیری توانایی شما را بهبود بخشد و همه این کارها فقط در چند ساعت انجام می‌شود.
 
+شما فرصت خواهید داشت با کسی در ارتباط بگیرید که زمان کافی برای بهبود مهارت‌های خود داشته باشد، راه‌های کارآمد برای انجام کارها را پیدا کند، و در عین حال به شما نشان دهد چگونه برنامه نویسی کنید و خودش چگونه به مسائل نگاه کرده است.
+
+مشاوران و منتورهای خوب، خودشان مسائل شما را حل نمی‌کنند، بلکه از روش سوکراتیک استفاده می‌کنند و سوالات خوبی می‌پرسند تا شما را مجاب به طرز فکر خود کنند. اگر از من بپرسید چگونه یک شبکه‌ برای تماس‌ها بنویسید، البته که می‌توانم به سادگی همه چیز را تایپ کرده و شما را به کپی کردن آن وادار کنم. اما این به شما کمکی نمی‌کند. به جای آن، اگر به من نشان دهید چگونه به مسئله نگاه کرده‌اید و من به شما نشان دهم چگونه من به مسئله نگاه کرده‌ام، آنگاه شما می‌توانید خیلی بیشتر از دنبال کردن یک دستورالعمل یاد بگیرید.
+
+دفعه بعدی که با مسئله دیگری روبرو شدید، می‌توانید همان رویکرد را به کار ببرید و به تنهایی آن را حل کنید. همیشه به یاد داشته باشید که امروزه اطلاعات فراوان است. صد سال پیش، اگر می‌خواستم درباره علت بیماری‌ها یاد بگیرم، احتمالاً باید اشرافی بودم، یا به یک استاد خدمت می‌کردم تا بتوانم شاگرد او شوم و یاد بگیرم. اما امروزه می‌توانم در گوگل جستجو کنم و جوابم را در چند ثانیه بگیرم.
+
+در نتیجه درگیر اطلاعات و منابع نشوید. به جای آن، یاد بگیرید که چگونه فکر کنید. چگونه به یک مسئله نگاه کنید. چگونه مسئله را تجزیه و تحلیل کنید. چگونه مسئله را درک کنید. این مهارت‌ها به شما کمک زیادی خواهند کرد تا نیازی به حفظ کردن مطالب تکراری نباشد.
+
+اما از کجا یک منتور پیدا کنید؟
+
+در تقریباً هر شهری در جهان جلسات Meetup مرتبط با برنامه‌نویسی برگزار می‌شود. به وب‌سایت [www.meetup.com](www.meetup.com) بروید و کسی را پیدا کنید که با زبانی که در حال یادگیری آن هستید، مرتبط باشد. در جلسات حضور پیدا کنید و افراد را بشناسید. تخصص خودتان را با تخصص آنها مبادله کنید. در آنجا شاید کسی به حسابدار یا مشاوره حقوقی نیاز داشته باشد. زمان خود را با زمان آنها مبادله کنید. به کسی نگویید: "آیا منتور من می‌شوی؟". هیچکس نمی‌خواهد وقت آزاد خود را برای یک غریبه هدر دهد. به جای آن، کمک خود را در مقابل خدمت آن‌ها پیشنهاد دهید و در 95% موارد موفق خواهید بود.
+
 [قانون یازدهم](https://github.com/mohsn-mirzaei/LearnToCode/blob/main/%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86/11-%D9%82%D8%A7%D9%86%D9%88%D9%86%E2%80%8C%DB%8C%D8%A7%D8%B2%D8%AF%D9%85.md)
